# FootReconstruct

./: .gitignore  CMakeLists.txt  README.md  setup.ps1
src/: Boundryextract.cpp  Boundryextract.h  Coordinate.cpp  Coordinate.h  FilterGround.cpp  FilterGround.h  FootCommon.h  HoleFix.cpp  HoleFix.h  MeshProcess.cpp  MeshProcess.h
